examples/test/testpolicy6298.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6298
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key9: value5
      key13: value8
      key40: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value31
          key30: value37
          key49: value26
      podSelector:
        matchLabels:
          key10: value3
